Add submodule Montpellier

--- a/src/pug/layouts/_layout.pug
+++ b/src/pug/layouts/_layout.pug
@@ -3,7 +3,7 @@ html(lang="en")
 
 	//- Variables to set active page in sidebar
 	block variables
-		- var activePage = 'dashboard';
+		- var activePage = 'index';
 		- var activeGroup = 'none';
 
 	head
