--- a/src/pug/includes/_header.scss
+++ b/src/pug/includes/_header.scss
@@ -28,10 +28,10 @@
 		display: block;
 		width: $sidebar-width;
 		@if $sidebar-accent == dark {
-			background-color: darken( $primary-color, 0% );
+			background-color: darken( $primary-color, 5% );
 		}
 		@if $sidebar-accent == light {
-			background-color: lighten( $primary-color, 0% );
+			background-color: lighten( $primary-color, 5% );
 		}
 	}
 	&:focus,
@@ -41,7 +41,7 @@
 	}
 }
 
-.app-sidebar__toggle {
+.talking {
 	padding: 0 15px;
 	font-family: fontAwesome;
 	color: #fff;
@@ -55,7 +55,7 @@
 	&:focus,
 	&:hover {
 		color: #fff;
-		background-color: darken($primary-color, 10);
+		background-color: darken($primary-color, 0);
 		text-decoration: none;
 	}
 }
