--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,72 +1,41 @@
-doctype html
-html
-	head
-		meta(charset='utf-8')
-		meta(http-equiv='X-UA-Compatible', content='IE=edge')
-		meta(name='viewport', content='width=device-width, initial-scale=1')
+extends layouts/_layout.pug
 
-		meta(name="description", content="Vali is a responsive and free dashboard theme/template built with Bootstrap 4, SASS and PUG.js.")
+block variables
+	- var activePage = 'index';
+	- var activeGroup = 'none';
 
-		// Twitter meta
-		meta(property="twitter:card", content="summary_large_image")
-		meta(property="twitter:site", content="@pratikborsadiya")
-		meta(property="twitter:creator", content="@pratikborsadiya")
+block content
+	.app-title
+		div
+			h1
+				i.fa.fa-dashboard
+				|  Dashboard
+			p A bunch of tools to check old and new stuff from CEWE sites
 
-		// Open Graph Meta
-		meta(property="og:type", content="website")
-		meta(property="og:site_name", content="Vali Admin")
-		meta(property="og:title", content="Vali Admin - Free Bootstrap 4 Dashboard Template")
-		meta(property='og:url', content='http://pratikborsadiya.in/vali-admin')
-		meta(property='og:image', content='http://pratikborsadiya.in/blog/vali-admin/hero-social.png')
-		meta(property="og:description", content="Vali is a responsive and free dashboard theme/template built with Bootstrap 4, SASS and PUG.js.")
+		ul.app-breadcrumb.breadcrumb
+			li.breadcrumb-item
+				i.fa.fa-home.fa-lg
+			li.breadcrumb-item
+				a(href='https://dev.paris.cewe.lan/extradata') Extradata
 
-		title Vali Admin - Free Bootstrap 4 Dashboard Template
+	.row
+		.col-md-6.col-lg-3
+			.widget-small.primary.coloured-icon
+				i.icon.fa.fa-users.fa-3x
+				div.info
+					h4 FNAC MCOPS
+					p
+						b 	
+						a.btn.btn-primary.icon-btn(href="https://dev.paris.cewe.lan:18455",target="_blank") Go to site
+						
+		.col-md-6.col-lg-3
+			.widget-small.info.coloured-icon
+				i.icon.fa.fa-thumbs-o-up.fa-3x
+				div.info
+					h4 Système U COPS3
+					p
+						b 	
+						a.btn.btn-primary.icon-btn(href="https://dev.paris.cewe.lan:13435",target="_blank") Go to site
+	
 
-		link(rel='stylesheet', type='text/css', href='css/main.css')
-
-	body.landing-page
-		include includes/_landing-icons.pug
-		section.landing-hero
-			.landing-hero-overlay
-			.landing-hero-content
-				h1.landing-hero-title Vali Admin - A Free Bootstrap 4 Dashboard Template
-				p.landing-hero-description Built with PugJS, SASS, and Bootstrap 4
-
-				div
-					a.btn.btn-primary.mr-4(href="dashboard.html") Demo
-					a.btn.btn-primary(href="https://github.com/pratikborsadiya/vali-admin" target="_blank" rel="noopener") GitHub
-
-				img.landing-hero-banner(src="images/banner.jpg")
-
-		section.features
-			h1.features-title Features
-
-
-			.features-cards
-				.features-card
-					.feature-icon-backdrop
-						svg.feature-icon: use(xlink:href='#icon-globe')
-					p.feature-description Free to use and open-source
-				.features-card
-					.feature-icon-backdrop
-						svg.feature-icon: use(xlink:href='#icon-smartphone')
-					p.feature-description Beautiful and mobile responsive
-				.features-card
-					.feature-icon-backdrop
-						svg.feature-icon: use(xlink:href='#icon-zap')
-					p.feature-description Built with Bootstrap 4, SASS and PUG.js
-				.features-card
-					.feature-icon-backdrop
-						svg.feature-icon: use(xlink:href='#icon-chart')
-					p.feature-description Chart.js integration to display responsive charts
-				.features-card
-					.feature-icon-backdrop
-						svg.feature-icon: use(xlink:href='#icon-layout')
-					p.feature-description Seven pre built pages including login, user profile and print friendly invoice page
-				.features-card
-					.feature-icon-backdrop
-						svg.feature-icon: use(xlink:href='#icon-grid')
-					p.feature-description Data tables with sort, search and paginate functions
-
-		footer.landing-footer Created by #[b Pratik Borsadiya] & 
-			a(href="https://github.com/pratikborsadiya/vali-admin/graphs/contributors" target="_blank" rel="noopener") contributors
+	.row
