--- a/src/sass/1-tools/_vars.scss
+++ b/src/sass/1-tools/_vars.scss
@@ -21,7 +21,8 @@ $white: #FFF;
 // Brown : #795548
 // Purple: #673AB7
 
-$primary-color: #009688;
+
+$primary-color: #c30c15;
 
 // Complementry color is used to indecate the loading bar on the top
 // of the page with pace.js plugin
